@@ -15,7 +15,7 @@
     <description>Team oversikt</description>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>16</java.version>
 
         <springdoc-openapi-ui.version>1.5.6</springdoc-openapi-ui.version>
         <hibernate-types-52.version>2.10.3</hibernate-types-52.version>
@@ -472,10 +472,7 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>15</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <release>16</release>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <parameters>true</parameters>
                 </configuration>
@@ -483,7 +480,6 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                         <include>**/*Test.java</include>
